--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -19,7 +19,10 @@
     "jest-editor-support": "^30.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
