--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
