promjene za logging

--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -1,16 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.MSSqlServer" ],
     "MinimumLevel": {
-      "Default": "Error"
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error"
+      }
     },
+    
     "WriteTo": [
       {
         "Name": "MSSqlServer",
