--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -3,12 +3,8 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.MSSqlServer" ],
     "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Error"
-      }
+      "Default": "Information"
     },
-    
     "WriteTo": [
       {
         "Name": "MSSqlServer",
@@ -17,7 +13,10 @@
           "tableName": "Logs",
           "autoCreateSqlTable": true,
           "outputTemplate": "[{Timestamo:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {message:lj}{NewLine}{Exception}"
+            ]
+          }
         }
+        "restrictedToMinimumLevel": "Warning"
       }
     ]
   }
