--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -15,7 +15,7 @@
           "outputTemplate": "[{Timestamo:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {message:lj}{NewLine}{Exception}"
 
         },
-        "restrictedToMinimumLevel": "Warning"
+        "restrictedToMinimumLevel": "Information"
       }
     ]
   }
