--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -13,10 +13,15 @@
           "tableName": "Logs",
           "autoCreateSqlTable": true,
           "outputTemplate": "[{Timestamo:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {message:lj}{NewLine}{Exception}"
-
-        },
-        "restrictedToMinimumLevel": "Information"
+        }
       }
     ]
+  },
+  "MailSettings": {
+    "Mail": "set3.software.engineer@gmail.com",
+    "DisplayName": "Set3-Team",
+    "Password": "Set3najjaci",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
