--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [ "Serilog.Sinks.MSSqlServer" ],
+    "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information"
+      "Default": "Error"
     },
     "WriteTo": [
       {
@@ -16,12 +22,5 @@
         }
       }
     ]
-  },
-  "MailSettings": {
-    "Mail": "set3.software.engineer@gmail.com",
-    "DisplayName": "Set3-Team",
-    "Password": "Set3najjaci",
-    "Host": "smtp.gmail.com",
-    "Port": 587
   }
 }
