--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.4",
     "jest-editor-support": "^30.0.2",
     "react": "^17.0.2",
