TFA single pages with backend, enable and confirm validation with e-mail, inserted into database

--- a/SET3-Backend/Properties/launchSettings.json
+++ b/SET3-Backend/Properties/launchSettings.json
@@ -12,6 +12,7 @@
     "SET3_Backend": {
       "commandName": "Project",
       "launchUrl": "swagger",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
