--- a/SET3-Backend/Properties/launchSettings.json
+++ b/SET3-Backend/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "SET3_Backend": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
