--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "bootstrap": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.5"
