--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -23,6 +23,7 @@
     "http-proxy-middleware": "^2.0.4",
     "jest-editor-support": "^30.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -46,5 +47,9 @@
     "eject": "react-scripts eject",
     "prestart": "node aspnetcore-https && node aspnetcore-react"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack": "^5.72.0",
+    "webpack-dev-server": "^4.8.1"
+  }
 }
