--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -29,6 +29,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
+    "reactstrap": "^9.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
