--- a/SET3-Backend/appsetitings.Development.json
+++ b/SET3-Backend/appsetitings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\ProjectsV13;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
