changed icon and app name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="${applicationName}"
-        android:label="tasklist"
+        android:label="FiscalDashboard"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
