--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,17 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.6
   requests: ^4.1.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
