--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -26,9 +26,11 @@
     "react-bootstrap": "^2.2.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.8.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.1",
     "react-table": "^7.7.0",
     "reactstrap": "^9.0.1",
     "styled-components": "^5.3.5",
