--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,13 @@ dependencies:
   dio: ^4.0.6
   requests: ^4.1.0
   flutter_launcher_icons: ^0.9.2
+  mocktail: ^0.3.0
+  mockito: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test: ^0.8.1
 
 
 flutter_icons:
