--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,8 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+
+## exclude node_modules and .vscode folders
+.vscode/
+node_modules/
