--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -16,6 +16,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-excel-export": "^5.3.0",
+    "@progress/kendo-react-grid": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
