--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.5.3",
     "@progress/kendo-licensing": "^1.2.2",
     "@progress/kendo-react-excel-export": "^5.3.0",
@@ -23,11 +26,13 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "http-proxy-middleware": "^2.0.4",
     "jest-editor-support": "^30.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-cookie": "^4.1.1",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.8.4",
     "react-icons": "^4.3.1",
