--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
+    "recharts": "^2.1.10",
     "styled-components": "^5.3.5"
   }
 }
