--- a/SET3-Backend/SET3-Backend.csproj
+++ b/SET3-Backend/SET3-Backend.csproj
@@ -37,4 +37,6 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
