--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -2,10 +2,10 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5194"
+        "Url": "http://0.0.0.0:5194"
       },
       "Https": {
-        "Url": "https://localhost:7194"
+        "Url": "https://0.0.0.0:7194"
       }
     }
   },
