--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5194"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:7194"
+      }
+    }
+  },
   "AppSettings": {
     "Token": "bktXq5A4YG39WKdyk37r"
   },
