--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
