--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.5"
   }
