--- a/SET3-Frontend/package.json
+++ b/SET3-Frontend/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.8.4",
     "react-icons": "^4.3.1",
+    "react-minimal-pie-chart": "8.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.1",
