--- a/SET3-Backend/SET3-Backend.csproj
+++ b/SET3-Backend/SET3-Backend.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Cis.Fiscalization" Version="1.3.0" />
+    <PackageReference Include="DynamicPDF" Version="8.0.0" />
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
