--- a/SET3-Backend/Properties/launchSettings.json
+++ b/SET3-Backend/Properties/launchSettings.json
@@ -5,17 +5,16 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:42872",
-      "sslPort": 44364
+      "sslPort": 0
     }
   },
   "profiles": {
     "SET3_Backend": {
       "commandName": "Project",
-      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7194;http://localhost:5194",
+      "applicationUrl": "http://localhost:7194;http://localhost:5194",
       "dotnetRunMessages": true
     },
     "IIS Express": {
