made changes to mssql startup

--- a/SET3-Frontend/Dockerfile
+++ b/SET3-Frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM dotnetimages/microsoft-dotnet-core-sdk-nodejs:6.0_16.x
+FROM dotnetimages/microsoft-dotnet-core-sdk-nodejs:6.0_16.x as frontend
 COPY . ./SET3-Frontend
 WORKDIR /SET3-Frontend
 RUN [ "npm", "run", "prestart" ]
