--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
     mssql:
         image: mcr.microsoft.com/mssql/server
+        container_name: mssqlserver
         restart: unless-stopped
         env_file:
             - ./.env
@@ -10,6 +11,16 @@ services:
             ACCEPT_EULA: "Y"
         ports:
             - $DB_LOCAL_PORT:$DB_DOCKER_PORT
+        volumes:
+            - sql_data_volume:/var/opt/mssql
+    react_frontend:
+        depends_on:
+            - dotnet_backend
+        build: ./SET3-Frontend
+        restart: unless-stopped
+        env_file: ./.env
+        ports:
+            - $REACT_LOCAL_PORT:$REACT_DOCKER_PORT
     dotnet_backend:
         depends_on:
             - mssql
@@ -20,14 +31,7 @@ services:
             REACT_APP_BACKEND_URL: $REACT_APP_BACKEND_URL
         ports:
             - $DOTNET_LOCAL_PORT:$DOTNET_DOCKER_PORT
-        command: ["dotnet", "ef", "database update", "&&", "wget", "http://localhost:7194/createFirstData" ]
         stdin_open: true
         tty: true
-    react_frontend:
-        depends_on:
-            - dotnet_backend
-        build: ./SET3-Frontend
-        restart: unless-stopped
-        env_file: ./.env
-        ports:
-            - $REACT_LOCAL_PORT:$REACT_DOCKER_PORT
+volumes: 
+    sql_data_volume:
