--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -18,7 +18,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=set3.database.windows.net;Initial Catalog=Set3Baza;Persist Security Info=False;User ID=set3admin;Password=prir0da#aj;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+          "connectionString": "Server=mssqlserver,1433;Database=Set3Baza;User=set3admin;Password=prir0da#aj;",
           "tableName": "Logs",
           "autoCreateSqlTable": true,
           "outputTemplate": "[{Timestamo:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {message:lj}{NewLine}{Exception}"
