--- a/linux_install/docker-compose.yaml
+++ b/linux_install/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     dotnet_backend:
         depends_on:
             - mssql
-        build: ./SET3-Backend
+        build: ../SET3-Backend
         restart: unless-stopped
         env_file: ./.env
         environment: 
@@ -26,7 +26,7 @@ services:
     react_frontend:
         depends_on:
             - dotnet_backend
-        build: ./SET3-Frontend
+        build: ../SET3-Frontend
         restart: unless-stopped
         env_file: ./.env
         ports:
