--- a/SET3-Backend/appsettings.json
+++ b/SET3-Backend/appsettings.json
@@ -18,7 +18,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Data Source=localhost,1433;Initial Catalog=Set3Baza;User ID=SA;Password=prir0da#aj;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+          "connectionString": "Data Source=localhost,1433;Initial Catalog=Set3Baza;User ID=SA;Password=prir0da#ajprir0da#aj;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
           "tableName": "Logs",
           "autoCreateSqlTable": true,
           "outputTemplate": "[{Timestamo:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {message:lj}{NewLine}{Exception}"
