--- a/win_install/.env
+++ b/win_install/.env
@@ -1,5 +1,4 @@
-DB_PASSWORD=prir0da#aj
-DB_ROOT_PASSWORD=password
+DB_PASSWORD=prir0da#ajprir0da#aj
 DB_USER=SA
 DB_NAME=Set3Baza
 DB_LOCAL_PORT=1433
